--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.2.0",
     "use-sound": "^4.0.1",
     "web-vitals": "^1.1.2"
   },
